--- a/index.html
+++ b/index.html
@@ -368,7 +368,8 @@
                                     <p>
                                         Check input text to see if it's a palindrome.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="https://palindrome-abalan.netlify.app">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a
+                                            href="https://palindrome-abalan.netlify.app">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -385,7 +386,8 @@
                                     <p>
                                         Calculate what a mortgage will really cost you.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="#">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a
+                                            href="https://abalan-mortgagecalc.netlify.app">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -402,7 +404,8 @@
                                     <p>
                                         Track event attendance for your company.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="https://abalan-eventhound.netlify.app/">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a
+                                            href="https://abalan-eventhound.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -419,7 +422,8 @@
                                     <p>
                                         This app takes in a string and reverses it.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="https://reverse-abalan.netlify.app/">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a
+                                            href="https://reverse-abalan.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -434,9 +438,11 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                       Two imput values make a set of numbers into a pattern, following the fizzbuzz propmt.
+                                        Two imput values make a set of numbers into a pattern, following the fizzbuzz
+                                        propmt.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="https://fizzbuzz-abalan.netlify.app/">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a
+                                            href="https://fizzbuzz-abalan.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -453,7 +459,8 @@
                                     <p>
                                         An API integration with TMDB. Showing the top 20 movies at any given time.
                                     </p>
-                                    <button type="button" class="btn btn-primary"><a href="https://movielist-abalan.netlify.app/">Try it</a></button>
+                                    <button type="button" class="btn btn-primary"><a
+                                            href="https://movielist-abalan.netlify.app/">Try it</a></button>
                                 </div>
                             </div>
                         </div>
@@ -605,7 +612,7 @@
         <!-- contact section -->
         <section id="contact" class="section-page ">
             <h2>Contact Me</h2>
-            <div class="card card-body text-dark">
+            <div class="card card-body text-dark" id="contact-card">
                 <form name="PortfolioContact" method="post" netlify>
                     <div class="row row-cols-1 mt-2">
                         <div class="col col-md-6 mb-2 mb-md-0">
