--- a/index.html
+++ b/index.html
@@ -120,26 +120,27 @@
                     </div>
                     <div class="col mt-5" style="text-align: center;">
                         <a href="#contact" class="btn btn-dark btn-lg btn-yellow">CONTACT</a> &nbsp;
-                        <a href="#" class="btn btn-dark btn-lg btn-yellow">RESUME</a>
+                        <a href="/img/Anyas/Resume.png" target="_blank"
+                            class="btn btn-dark btn-lg btn-yellow">RESUME</a>
                     </div>
                 </div>
             </div>
 
         </section>
-        </div>
         <!-- about me section -->
         <section id="about" class="section-page">
             <div class="container text-center">
                 <h2 class="mb-5">About Me</h2>
-                <img src="/img/profilephoto.png" height="450" class="p-3 mb-5 img-fluid" />
+                <img src="/img/profilephoto.png" class="p-3 mb-5 responsivePicture" />
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
-                        I am a software developer based in Alpharetta, GA. I mainly use C# and .net to build web
-                        applications. I excell at taking an idea and turning it into useful software products. Take a
-                        look at my portfoglio and see if we can work together to work on your next project.
+                        I am a software developer based in Alpharetta, GA. I mainly use C# and ASP.NET. I can take an
+                        idea and turn it into a fully-functioning software application. Take
+                        a
+                        look at my portfolio and feel free to contact me.
                     </div>
                 </div>
-                <a href="/resume.pdf" class="btn btn-primary my-3"> Open Resume</a>
+                <a href="/img/Anyas/Resume.png" target="_blank" class="btn btn-primary my-3"> Open Resume</a>
             </div>
         </section>
 
@@ -164,10 +165,9 @@
                             <div class="icon-card-body">
                                 <!-- content of card -->
                                 <p>
-                                    I utilize C# to develop full-stack web applications. View my <a
-                                        href="#projects">projects</a> section to see examples of how I implement C# in
-                                    my work. I use established design patterns and frameworks such as ASP.NET Core Web
-                                    and MVC to create websites that meet project objectives.
+                                    I utilize C#, as well as industry-standard design patterns, like MVC, to develop
+                                    full-stack web applications. View my main <a href="#projects">projects</a> section
+                                    to see examples.
                                 </p>
                             </div>
                         </div>
@@ -195,8 +195,8 @@
                             <div class="icon-card-body">
                                 <!-- content of card -->
                                 <p>
-                                    I use C# on a daily basis to build full-stack web applications. You can see my work
-                                    implementing C# in my <a href="#projects">projects</a> section!
+                                    For front-end development, I use HTML and CSS, as well as Bootstrap 5 to enhance the
+                                    look and layout of my projects, and bring consistensy to their design.
                                 </p>
                             </div>
                         </div>
@@ -216,8 +216,9 @@
                             <div class="icon-card-body">
                                 <!-- content of card -->
                                 <p>
-                                    I use C# on a daily basis to build full-stack web applications. You can see my work
-                                    implementing C# in my <a href="#projects">projects</a> section!
+                                    I use JavaScript to bring websites to life, and make them fully interactive. Check
+                                    out my
+                                    <a href="#jsProjects">JavaScript</a> section to learn more.
                                 </p>
 
                             </div>
@@ -238,8 +239,8 @@
                             <div class="icon-card-body">
                                 <!-- content of card -->
                                 <p>
-                                    I use C# on a daily basis to build full-stack web applications. You can see my work
-                                    implementing C# in my <a href="#projects">projects</a> section!
+                                    I use PostgreSQL as my database management system. It helps achieve scalability and
+                                    efficiency in handling data structures.
                                 </p>
 
                             </div>
@@ -265,8 +266,8 @@
                             <div class="icon-card-body">
                                 <!-- content of card -->
                                 <p>
-                                    I use C# on a daily basis to build full-stack web applications. You can see my work
-                                    implementing C# in my <a href="#projects">projects</a> section!
+                                    I use git and Github as my go-to version control suite. They offer me all the
+                                    functionality I need to keep track of changes.
                                 </p>
 
                             </div>
@@ -280,9 +281,11 @@
         <section id="projects" class="section-page">
             <div class="container">
                 <h2>Projects</h2>
-                <p class="my-3">Showcasing complete functional projects demonstrates what I can bring to your project. I
-                    built these projects from the ground up to demonstrate skill with front end, back end, security, and
-                    database development. All these projects are full-stack web applications that are published so that
+                <p class="my-3">Showcasing complete functional projects demonstrates what I can contribute to your team.
+                    I
+                    built these projects to demonstrate skill with front end, back end, security, and
+                    database development. All of these projects are full-stack web applications that are published so
+                    that
                     you
                     can demo them easily! <a href="#contact">Contact</a> me for a complete code walk-through.</p>
 
@@ -346,12 +349,11 @@
                 </div>
 
 
-                <h2 class="mt-5">Smaller Projects</h2>
-                <p class="my-3">Showcasing complete functional projects demonstrates what I can bring to your project. I
-                    built these projects from the ground up to demonstrate skill with front end, back end, security, and
-                    database development. All these projects are full-stack web applications that are published so that
-                    you
-                    can demo them easily! <a href="#contact">Contact</a> me for a complete code walk-through.</p>
+                <h2 class="mt-5" id="jsProjects">Smaller Projects</h2>
+                <p class="my-3">
+                    Alongside my larger projects, I have also built several smaller projects to show proficiency with
+                    making dynamic web applications that can take user inputs and deliver results.
+                </p>
 
                 <!-- row of 6 smaller projects -->
 
