--- a/index.html
+++ b/index.html
@@ -663,17 +663,12 @@
 
             <div class="row row-cols-1 g-3 py-1">
 
-                <div class="col col-6 col-md-4 text-start pt-1">
-                    <img src="/img/Anyas/bird.png" alt="Logo" height="40">
-                    <img src="/img/Anyas/greyname.png" alt="Logo" height="40">
-
+                <div class="col col-6 text-start pt-1">
+                    <div><a href=""><img src="/img/Anyas/cutecomputer.png" alt="Logo" height="40"> Try the Bug Tracker</a></div>
                 </div>
-                <div class="col-md-4 text-center pt-2 bugTrackLink">
-                    <!-- To Do: Change to Our Link -->
-                    <div>Check out my <a href="#"> Bug Tracker</a></div>
-                </div>
-                <div class="col col-6 col-md-4 text-end">
-                    <a class="text-decoration-none" href="#">
+               
+                <div class="col col-6 text-end">
+                    <a class="text-decoration-none" href="www.linkedin.com/in/anna-balan-37674a25a">
                         <i class="bi bi-linkedin p-2 socialIcons"></i>
                     </a>
                     <a class="text-decoration-none" href="https://github.com/A-Balan/Portfolio">
