--- a/index.html
+++ b/index.html
@@ -11,17 +11,15 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
     <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Fira+Sans:wght@100;200;300;400;500;800&family=Roboto:wght@400;700&display=swap"
-        rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700900&display=swap" rel="stylesheet">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-        rel="stylesheet">
 
     <!-- devicons.dev -->
 
@@ -109,38 +107,43 @@
     <main data-bs-spy="scroll" data-bs-target="#menuPill">
         <!-- landing screen -->
         <section id="home">
-            <div id="homeCover">
-                <div class="row-col-1 mainHeader">
-                    <div class="col mainTitle text-center">
-                        <img src="/img/Anyas/title.png" class="img-fluid">
-                        <!-- <h3 class="text-start text-dark">I'm a full-stack Software Developer in Alpharetta, GA. Take a
-                            look at my portfolio & Contact me with projects you wish to bring to life. </h3> -->
-                    </div>
-                    <div class="maxWidthContainer text-center">
-                        <h4 class="text-dark mb-0 mt-3">I'm a full-stack Software Developer in Alpharetta, GA. Take a
-                            look at my portfolio & Contact me with projects you wish to bring to life.</h4>
-                    </div>
-                    <div class="col" style="text-align: center;">
-                        <!-- <p class="text-dark text-center">I'm a full-stack Software Developer in Alpharetta, GA. Take a
-                            look at my portfolio & Contact me with projects you wish to bring to life.</p> -->
-                        <div class="row">
-                            <div class="col hoverIcon">
-                                <a href="#contact" class="hoverIcon">
-                                    <img src="/img/Anyas/envelopepixel2.png" />
-                                    <br>
-                                    <h4 class="text-dark">Contact</h4>
-                                </a> &nbsp;
-                            </div>
-                            <div class="col hoverIcon">
-                                <a href="/img/Anyas/Resume.png" target="_blank"><img src="/img/Anyas/folderpixel.png" />
-                                    <br>
-                                    <h4 class="text-dark" style="letter-spacing: 0.2rem;">&nbsp;Resume</h4>
+            <div id="home-info" class="row text-center m-5">
+                <div class="col-12 text-end">
+                    <h1 class="ms-5" style="font-size: 6rem; "><strong>Anya Balan</strong></h1>
+                </div>
+                <div class="col-6">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="hoverIcon" style="margin-right: -6vw;">
+                                <a href="#contact">
+                                    <img src="/img/Anyas/envelopepixel2.png" class="smallFileImg" />
                                 </a>
-
                             </div>
+                            <h3 class="text-light text-end me-3">Contact</h3>
+                        </div>
+                        <div class="col-6">
+                            <div class="hoverIcon" style="margin-top: -5vh; margin-left: -6vw;">
+                                <a href="/img/Anyas/Resume.png" target="_blank"><img src="/img/Anyas/folderpixel.png"
+                                        class="smallFileImg" />
+                                </a>
+                            </div>
+                            <h3 class="text-light displayNoneContact hoverIcon">Resume</h3>
                         </div>
                     </div>
                 </div>
+                <div class="col-6 text-center">
+                    <h5 class="text-light">I'm a full-stack Software Developer in Alpharetta, GA. Take a
+                        look at my portfolio & Contact me with projects you wish to bring to life.</h5>
+                </div>
+
+                <div class="col-6 d-flex">
+                    <div class="row">
+                        <div class="col-12">
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
 
         </section>
@@ -324,7 +327,7 @@
                                     <p>
                                         A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
                                     </p>
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
+                                    <button type="button" class="btn btn-primary bwTextBtn" data-bs-toggle="modal"
                                         data-bs-target="#contactProModal">Learn More</button>
                                 </div>
                             </div>
@@ -616,7 +619,7 @@
         <section id="contact" class="section-page ">
             <div class="row row-cols-1 row-cols-sm-2">
 
-                <div class="col"> <img src="/img/profilephoto.png" class="p-3 mb-5 responsivePicture" /> </div>
+                <div class="col"> <img class="w-75" src="/img/Anyas/faceinframe.png" /></div>
 
                 <div class="col">
                     <h2 class="ms-3">Contact Me <img src="/img/Anyas/pigeontoast.png" height="65" /></h2>
