--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             </div>
 
             <div class="nav-item">
-                <a href="#blog" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <a href="#blogs" class="nav-link" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     data-bs-title="Blog" data-bs-custom-class="nav-tooltip">
                     <div class="icon-container">
                         <i class="bi bi-quote"></i>
@@ -475,138 +475,12 @@
 
 
         <!-- blog -->
-        <section id="blog" class="section-page">
+        <section id="blogs" class="section-page">
             <div class="container">
                 <h2 class="mb-5 text-center">
                     The Blog <img src="/img/Anyas/catblogger.png" height="65" />
                 </h2>
-                <article class="card mb-4 blog-article">
-                    <div class="row blog-row g-0">
-                        <!-- blog image -->
-                        <div class="col-lg-4 blog-header">
-                            <a class="blog-image-link" href="#">
-                                <img class="blog-image" alt="Blog post image" src="/img/Blog/Blog_FlyingGirl.jpg">
-                            </a>
-                            <div class="blog-date">
-                                <div class="blog-day">11</div>
-                                <div class="blog-month">January</div>
-                            </div>
-                        </div>
-                        <!-- title and text -->
-                        <div class="col-lg-8">
-                            <div class="card-body h-100 d-flex flex-column justify-content-around">
-                                <h3 class="card-title">MAKE SQL QUERIES FLY</h3>
-                                <p class="card-text line-clamp"> Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Laboriosam, iusto. Facere pariatur optio, ipsam laboriosam a incidunt
-                                    asperiores, modi magni labore recusandae aperiam voluptas, eum dignissimos?
-                                    Architecto ratione repellat quas.</p>
-                                <div>
-                                    <a href="#" class="btn btn-primary">Read More</a>
-                                </div>
-                                <p class="card-text">
-                                    <small class="text-muted">Published 3 days ago</small>
-                                </p>
-                            </div>
-                        </div>
 
-                    </div>
-                </article>
-
-                <article class="card mb-4 blog-article">
-                    <div class="row blog-row g-0">
-                        <!-- blog image -->
-                        <div class="col-lg-4 blog-header">
-                            <a class="blog-image-link" href="#">
-                                <img class="blog-image" alt="Blog post image" src="/img/Blog/Blog_Database.jpg">
-                            </a>
-                            <div class="blog-date">
-                                <div class="blog-day">12</div>
-                                <div class="blog-month">July</div>
-                            </div>
-                        </div>
-                        <!-- title and text -->
-                        <div class="col-lg-8">
-                            <div class="card-body h-100 d-flex flex-column justify-content-around">
-                                <h3 class="card-title">MAKE SQL QUERIES FLY</h3>
-                                <p class="card-text line-clamp"> Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Laboriosam, iusto. Facere pariatur optio, ipsam laboriosam a incidunt
-                                    asperiores, modi magni labore recusandae aperiam voluptas, eum dignissimos?
-                                    Architecto ratione repellat quas.</p>
-                                <div>
-                                    <a href="#" class="btn btn-primary">Read More</a>
-                                </div>
-                                <p class="card-text">
-                                    <small class="text-muted">Published 3 days ago</small>
-                                </p>
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
-
-                <article class="card mb-4 blog-article">
-                    <div class="row blog-row g-0">
-                        <!-- blog image -->
-                        <div class="col-lg-4 blog-header">
-                            <a class="blog-image-link" href="#">
-                                <img class="blog-image" alt="Blog post image" src="/img/Blog/Blog_CodeTag.jpg">
-                            </a>
-                            <div class="blog-date">
-                                <div class="blog-day">13</div>
-                                <div class="blog-month">July</div>
-                            </div>
-                        </div>
-                        <!-- title and text -->
-                        <div class="col-lg-8">
-                            <div class="card-body h-100 d-flex flex-column justify-content-around">
-                                <h3 class="card-title">MAKE SQL QUERIES FLY</h3>
-                                <p class="card-text line-clamp"> Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Laboriosam, iusto. Facere pariatur optio, ipsam laboriosam a incidunt
-                                    asperiores, modi magni labore recusandae aperiam voluptas, eum dignissimos?
-                                    Architecto ratione repellat quas.</p>
-                                <div>
-                                    <a href="#" class="btn btn-primary">Read More</a>
-                                </div>
-                                <p class="card-text">
-                                    <small class="text-muted">Published 3 days ago</small>
-                                </p>
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
-
-                <article class="card mb-4 blog-article">
-                    <div class="row blog-row g-0">
-                        <!-- blog image -->
-                        <div class="col-lg-4 blog-header">
-                            <a class="blog-image-link" href="#">
-                                <img class="blog-image" alt="Blog post image" src="/img/Blog/Blog_DecisionRoad.jpg">
-                            </a>
-                            <div class="blog-date">
-                                <div class="blog-day">14</div>
-                                <div class="blog-month">July</div>
-                            </div>
-                        </div>
-                        <!-- title and text -->
-                        <div class="col-lg-8">
-                            <div class="card-body h-100 d-flex flex-column justify-content-around">
-                                <h3 class="card-title">MAKE SQL QUERIES FLY</h3>
-                                <p class="card-text line-clamp"> Lorem ipsum dolor sit amet consectetur adipisicing
-                                    elit. Laboriosam, iusto. Facere pariatur optio, ipsam laboriosam a incidunt
-                                    asperiores, modi magni labore recusandae aperiam voluptas, eum dignissimos?
-                                    Architecto ratione repellat quas.</p>
-                                <div>
-                                    <a href="#" class="btn btn-primary">Read More</a>
-                                </div>
-                                <p class="card-text">
-                                    <small class="text-muted">Published 3 days ago</small>
-                                </p>
-                            </div>
-                        </div>
-
-                    </div>
-                </article>
             </div>
         </section>
         <!-- contact section -->
@@ -1012,6 +886,37 @@
         </div>
     </div>
 
+    <!-- Blogpost Template -->
+    <template id="blog-template">
+        <article class="card mb-4 blog-article">
+            <div class="row blog-row g-0">
+                <!-- blog image -->
+                <div class="col-lg-4 blog-header">
+                    <a class="blog-image-link" href="#" data-blog="imageLink">
+                    </a>
+                    <div class="blog-date" data-blog="publishedDate">
+                        <div class="blog-day" data-blog="day"></div>
+                        <div class="blog-month" data-blog="month"></div>
+                    </div>
+                </div>
+                <!-- title and text -->
+                <div class="col-lg-8">
+                    <div class="card-body h-100 d-flex flex-column justify-content-around">
+                        <h3 class="card-title" data-blog="title"></h3>
+                        <p class="card-text line-clamp" data-blog="content"></p>
+                        <div>
+                            <a href="#" class="btn btn-primary" data-blog="readMoreLink">Read Morre</a>
+                        </div>
+                        <p class="card-text">
+                            <small class="text-muted"></small>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </article>
+    </template>
+
     <!-- bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
@@ -1057,6 +962,8 @@
             })
         }
     </script>
+
+    <script src="js/blogApi.js"></script>
 
 </body>
 
