Fixed breakpoints on small screen sizes

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
         <!-- landing screen -->
         <section id="home">
             <div id="home-info" class="row text-center m-5">
-                <div class="col-12 text-end">
-                    <h1 class="ms-5">Anya Balan</h1>
-                    <h2> Software Developer</h2>
+                <div class="col-12 text-end ">
+                    <h1 class="ms-5 h1TitleText betterLineHeight">Anya Balan</h1>
+                    <h2 class="h2SubtitleText"> Software Developer</h2>
 
                 </div>
                 <div class="row">
@@ -114,7 +114,9 @@
                     <div class="col-6">
                         <div class="hoverIcon" style="margin-right: -6vw;">
                             <a href="#contact">
-                                <img src="/img/Anyas/envelopepixel2.png" class="dynamicFileImg" />
+                                <img src="/img/Anyas/envelopepixel2.png"
+                                    class="dynamicFileImg mt-1 mt-sm-2 mt-md-3 mt-lg-3" />
+                                <div class="hoverText">Contact</div> <!-- Added this line -->
                             </a>
                         </div>
 
@@ -123,6 +125,7 @@
                         <div class="hoverIcon">
                             <a href="/img/Anyas/Resume.png" target="_blank"><img src="/img/Anyas/folderpixel.png"
                                     class="dynamicFileImg" />
+                                <div class="hoverText">Resume</div> <!-- Added this line -->
                             </a>
                         </div>
 
@@ -274,6 +277,9 @@
                         </div>
                     </div>
                 </div>
+                <br />
+                <br />
+                <br />
             </div>
         </section>
 
