--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     <h2 class="h2SubtitleText"> Software Developer</h2>
 
                 </div>
+        
                 <div class="row">
 
                     <div class="col-6">
@@ -325,7 +326,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        A full-stack, multi-tenant address book, built with ASP.NET, C#, and SQL.
                                     </p>
                                     <button type="button" class="btn btn-primary bwTextBtn" data-bs-toggle="modal"
                                         data-bs-target="#contactProModal">Learn More</button>
@@ -343,7 +344,7 @@
                                 </picture>
                                 <div class="hc-content">
                                     <p>
-                                        A full-stack bug tracker built with ASP.NET, MVC, C#, and SQL.
+                                        A full-stack, multi-role blog, implementing Swagger API Service.
                                     </p>
                                     <button type="button" class="btn btn-primary" data-bs-toggle="modal"
                                         data-bs-target="#techTalkModal">Learn More</button>
@@ -579,7 +580,7 @@
 
     <!-- Modals -->
     <!-- Bug tracker modal -->
-    <div class="modal fade" id="bugTrackerModal" tabindex="-1" aria-label="Bug Tracker Modal" aria-hidden="true">
+    <div class="modal fade text-dark" id="bugTrackerModal" tabindex="-1" aria-label="Bug Tracker Modal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
@@ -684,11 +685,11 @@
 
     <!-- Modal 2 -->
 
-    <div class="modal fade" id="contactProModal" tabindex="-1" aria-label="Contact Pro Modal" aria-hidden="true">
+    <div class="modal fade text-dark" id="contactProModal" tabindex="-1" aria-label="Contact Pro Modal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5">Contact Pro</h1>
+                    <h1 class="modal-title fs-5">Contact Keeper</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -708,19 +709,15 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/img/logos/Contact_Pro.png" class="d-block w-100" alt="Logo">
+                                        <img src="/img/Anyas/contactpic3.png" class="d-block w-100" alt="Logo">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen1.jpg" class="d-block w-100"
+                                        <img src="/img/Anyas/contactpic2.png" class="d-block w-100"
                                             alt="Screenshot 2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen2.jpg" class="d-block w-100"
+                                        <img src="/img/Anyas/contactpic1.png" class="d-block w-100"
                                             alt="Screenshot 2">
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen3.jpg" class="d-block w-100"
-                                            alt="Screenshot 3">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#contactProCarousel"
@@ -738,8 +735,8 @@
 
                         <div class="col-12 col-lg-7">
                             <!-- About the Project -->
-                            <h3>Bug Tracker</h3>
-                            <p>BugBox is a software defect tracking system. Commonly known as a bug
+                            <h3>Contact Keeper</h3>
+                            <!-- <p>The Address Book is a software defect tracking system. Commonly known as a bug
                                 tracker. Insectcide is built with ASP.NET, MVC, C# and SQL. A role based
                                 security system was implemented to create permission based roles. The roles of
                                 Admin , Project Manager, Developer and Submitter restrict what the user can see
@@ -748,7 +745,7 @@
                             <p> The system was built with C# and .Net in 3 weeks. The front end was developed
                                 with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
                                 database was built with SQL Server and hosted on Azure. Please visit the site
-                                and try it out.</p>
+                                and try it out.</p> -->
 
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -781,7 +778,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <a href="https://addressbook.up.railway.app/" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
@@ -789,11 +786,11 @@
 
     <!-- Modal 3 -->
 
-    <div class="modal fade" id="techTalkModal" tabindex="-1" aria-label="Bug Tracker Modal" aria-hidden="true">
+    <div class="modal fade text-dark" id="techTalkModal" tabindex="-1" aria-label="Bug Tracker Modal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5">Tech Talk</h1>
+                    <h1 class="modal-title fs-5">In the Weeds Blog</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -813,20 +810,17 @@
                                 </div>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="/img/logos/Tech_Talk.png" class="d-block w-100" alt="Logo">
+                                        <img src="/img/Anyas/picbloghome.png" class="d-block w-100" alt="Logo">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen1.jpg" class="d-block w-100"
+                                        <img src="/img/Anyas/piccreate.png" class="d-block w-100"
                                             alt="Screenshot 2">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen2.jpg" class="d-block w-100"
+                                        <img src="/img/Anyas/picapi.png" class="d-block w-100"
                                             alt="Screenshot 2">
                                     </div>
-                                    <div class="carousel-item">
-                                        <img src="/img/screenshots/BugTrackerScreen3.jpg" class="d-block w-100"
-                                            alt="Screenshot 3">
-                                    </div>
+                                   
                                 </div>
                                 <button class="carousel-control-prev" type="button" data-bs-target="#techTalkCarousel"
                                     data-bs-slide="prev">
@@ -843,17 +837,17 @@
 
                         <div class="col-12 col-lg-7">
                             <!-- About the Project -->
-                            <h3>Bug Tracker</h3>
-                            <p>BugBox is a software defect tracking system. Commonly known as a bug
+                            <h3>In the Weeds Blog</h3>
+                            <!-- <p>BugBox is a software defect tracking system. Commonly known as a bug
                                 tracker. Insectcide is built with ASP.NET, MVC, C# and SQL. A role based
                                 security system was implemented to create permission based roles. The roles of
                                 Admin , Project Manager, Developer and Submitter restrict what the user can see
                                 and do. The software allows for users to submit tickets and those tickets are
                                 tracked through status from Open to Complete.</p>
-                            <p> The system was built with C# and .Net in 3 weeks. The front end was developed
-                                with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
+                            <p> The system was built with C# and .Net in 3 weeks. The front end was developed -->
+                                <!-- with HTML, Javascript and Bootstrap. The back-end utlizies MVC and C#. The
                                 database was built with SQL Server and hosted on Azure. Please visit the site
-                                and try it out.</p>
+                                and try it out.</p> --> 
 
                             <ul class="list-group">
                                 <li class="list-group-item">
@@ -886,7 +880,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <a href="https://intheweedsblog-production.up.railway.app/" class="btn btn-primary">Try the App</a>
                 </div>
             </div>
         </div>
