--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                     <div class="col-6">
                         <div class="hoverIcon">
-                            <a href="/img/Anyas/Resume.png" target="_blank"><img src="/img/Anyas/folderpixel.png"
+                            <a href="/img/Anyas/AnnaBalan.png" target="_blank"><img src="/img/Anyas/folderpixel.png"
                                     class="dynamicFileImg" />
                                 <div class="hoverText">Resume</div> <!-- Added this line -->
                             </a>
